[tool.poetry]
name = "centaur"
version = "0.1.0"
description = ""
authors = ["Centaur Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest:main"
lint = "scripts.lint:main"
